--- a/res/xml/opengate_provider.xml
+++ b/res/xml/opengate_provider.xml
@@ -3,6 +3,6 @@
     android:initialLayout="@layout/widget_opengate" 
     android:minHeight="72dp" 
     android:minWidth="72dp"
-    android:updatePeriodMillis="6000000" 
-    >
+    android:widgetCategory="keyguard|home_screen"
+    android:updatePeriodMillis="6000000">
 </appwidget-provider>
